Add a search endpoint